# ghost

./: Cargo.toml  action.yml  generate_test_file.js  ghost.toml
.github/workflows/: push.yml  release.yml  test.yml
files/: exploit.txt  poisoned_test_file.js
src/: main.rs  settings.rs
