[package]
name = "ghost"
version = "0.1.0"
edition = "2024"

[dependencies]
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
